[feature] add create friend endpoint and get nearby friends endpoint
