# internal/usecase/createfriend/internal/repository/model.go
@@ -1,0 +1,6 @@
+package repository
+
+type userFriendPair struct {
+	UserID   string `db:"user_id"`
+	FriendID string `db:"friend_id"`
+}
